# agent-kit

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
.claude/agents/: bug-detective.md  code-compactor.md  code-optimization-architect.md  code-quality-auditor.md
.github/workflows/: claude-code-review.yml  codex-auto-review.yml
agent_kit/: __init__.py  exceptions.py  main.py
agent_kit/agents/: __init__.py  base_agent.py
agent_kit/agents/hello/: __main__.py  agent.py  console.py
agent_kit/api/: __init__.py  core.py  exceptions.py  models.py  progress.py
agent_kit/api/console/: __init__.py  prompt.py  server.py
agent_kit/api/http/: __init__.py  auth.py  mcp.py  models.py  registry.py  rest.py  server.py
agent_kit/api/http/ui/: app.js  index.html  styles.css
agent_kit/api/mcp/: __init__.py  stdio.py
agent_kit/clients/: __init__.py  base.py  openai_client.py
agent_kit/config/: __init__.py  config.py  loader.py  models.py
agent_kit/data/config/: config.yaml
agent_kit/prompts/: __init__.py  loader.py
agent_kit/utils/: __init__.py  paths.py  prompt_debug.py  tools.py
agents/hello/: __init__.py  __main__.py  agent.py  config.yaml  console.py  http.py  models.py  tools.py
responses_agent/: main.py
responses_agent/agents/: __init__.py  base_agent.py
responses_agent/agents/hello/: agent.py
responses_agent/api/: __init__.py  core.py  exceptions.py  progress.py
responses_agent/api/console/: prompt.py  server.py
responses_agent/clients/: __init__.py  base.py  openai_client.py
responses_agent/config/: config.py  loader.py
responses_agent/data/config/: config.yaml
responses_agent/data/prompts/hello/: orchestrator.yaml
responses_agent/prompts/: loader.py  models.py
responses_agent/utils/: __init__.py  prompt_debug.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config.py  test_http_auth.py  test_http_mcp.py  test_http_rest.py  test_mcp_stdio.py  test_prompts.py  test_sessions.py  test_tools.py
